# fablesynth

./: .gitignore  DESIGN.md  PRODUCT.md  README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.claude/skills/verify/: SKILL.md
.github/workflows/: pages.yml  release.yml
.impeccable/: design.json
app/: index.html
assets/drum-samples/808/: SOURCES.md
assets/drum-samples/uzu/: SOURCES.md
bass/: index.html
css/: style.css
design-handoff/synthesizer-mockup-design/: README.md
design-handoff/synthesizer-mockup-design/project/: .thumbnail  Fable Synth.dc.html  (+3 more)
docs/: editing-concept.md  juce-fidelity-review.md  sq4-clips.md
drum/: index.html
js/: main.js  params.js  presets.js
js/engine/: synth.js  wavetables.js  worklet.js
js/ui/: displays.js  keyboard.js  knob.js
juce/: CMakeLists.txt  README.md
juce/docs/: DR1_DESIGN.md
juce/source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  WavetableView.cpp  WavetableView.h
juce/source/bass/: BassDeviceBody.cpp  BassDeviceBody.h  BassEditor.cpp  BassEditor.h  BassProcessor.cpp  BassProcessor.h
juce/source/bass/dsp/: BassEngine.cpp  BassEngine.h  BassFx.cpp  BassFx.h  BassParams.cpp  BassParams.h  BassPatches.cpp  BassPatches.h
juce/source/bass/ui/: BassFxRack.cpp  BassFxRack.h  BassHeader.cpp  BassHeader.h  BassPanels.cpp  BassPanels.h  BassUiModel.h  PitchSeqView.cpp  PitchSeqView.h
juce/source/drum/: DrumDeviceBody.cpp  DrumDeviceBody.h  DrumEditor.cpp  DrumEditor.h  DrumProcessor.cpp  DrumProcessor.h
juce/source/drum/dsp/: DrumEngine.cpp  DrumEngine.h  DrumFx.cpp  DrumFx.h  DrumKits.cpp  DrumKits.h  DrumParams.cpp  DrumParams.h  DrumPatches.cpp  DrumPatches.h  DrumTables.cpp  DrumTables.h  OneShotSamples.gen.cpp  OneShotSamples.gen.h  SampledTables.gen.cpp  SampledTables.gen.h
juce/source/drum/ui/: DrumFxRack.cpp  DrumFxRack.h  DrumHeader.cpp  DrumHeader.h  DrumPanels.cpp  DrumPanels.h  DrumUiModel.h  PadGrid.cpp  PadGrid.h  PadStrip.cpp  PadStrip.h  StepSeqView.cpp  StepSeqView.h
juce/source/dsp/: ClipHost.h  Engine.cpp  Engine.h  FrameOps.h  Fx.cpp  Fx.h  NoteSeq.h  Params.cpp  Params.h  Presets.cpp  Presets.h  UserTables.cpp  UserTables.h  Wavetables.cpp  Wavetables.h
juce/source/seq/: ClipClipboardCodec.cpp  ClipClipboardCodec.h  ClipLibraryStorage.cpp  ClipLibraryStorage.h  SeqEditor.cpp  SeqEditor.h  SeqProcessor.cpp  SeqProcessor.h  SessionCodec.cpp  SessionCodec.h
juce/source/seq/dsp/: ClipLibrary.cpp  ClipLibrary.gen.h  ClipLibrary.h  Conductor.cpp  Conductor.h  SeqFactory.cpp  SeqFactory.h  SeqModel.h  SeqProtocol.h  SnapshotHistory.h
juce/source/seq/ui/: ClipEditView.cpp  ClipEditView.h  DeviceFocusView.cpp  DeviceFocusView.h  HostedBassModel.cpp  HostedBassModel.h  HostedDrumModel.cpp  HostedDrumModel.h  HostedWtModel.cpp  HostedWtModel.h  SceneGridView.cpp  SceneGridView.h  SeqFooterView.cpp  SeqFooterView.h  SeqHeader.cpp  SeqHeader.h  TrackHeadsView.cpp  TrackHeadsView.h
juce/source/ui/: Controls.cpp  Controls.h  DeviceParameterBank.cpp  DeviceParameterBank.h  DeviceUiModel.h  Displays.cpp  Displays.h  Format.h  LookAndFeel.h  Modulation.cpp  Modulation.h  NoteSeqView.cpp  NoteSeqView.h  Panels.cpp  Panels.h  ParameterSource.cpp  ParameterSource.h  ProgramDirty.h  StandaloneTopBar.cpp  StandaloneTopBar.h  StepEditOps.h  Theme.h  WavetableEditor.cpp  WavetableEditor.h  WtDeviceBody.cpp  WtDeviceBody.h  WtUiModel.h
juce/test/: bass_engine_test.cpp  bass_host_test.cpp  drum_engine_test.cpp  drum_host_test.cpp  engine_test.cpp  measure_track_levels.cpp  plugin_host_test.cpp  sq4_engine_test.cpp  sq4_host_test.cpp  step_edit_ops_test.cpp
juce/test/fixtures/: web-session-download.json  web-session-presets.json  web-session.json
scripts/: balance-wt1-eq.mjs  build-dr1-clip-content.mjs  build-drum-samples.mjs  build-drum-tables.d.mts  build-drum-tables.mjs  dump-session-file.ts  dump-session-presets.ts  dump-session.ts  generate-clip-library.mjs  install-vst.sh  measure-bass-patches.mjs  measure-drum-patches.mjs  measure-wt1-presets.mjs  upgrade-wt-poly-clips.mjs
seq/: index.html
shared/: seq-clips.json
src/: App.tsx  constants.ts  index.css  noteseq.test.ts  noteseq.ts  params.test.ts  params.ts  presets.test.ts  presets.ts  sequenceLength.ts  store.test.ts  store.ts
src/bass/: BassApp.tsx  bass.css  main.tsx  params.test.ts  params.ts  patches.test.ts  patches.ts  seq.test.ts  seq.ts  store.test.ts  store.ts
src/components/: Keyboard.tsx  Knob.tsx  ModSourceChip.tsx  NoteLengthHandle.tsx  PowerButton.tsx  PowerOverlay.tsx  SeqSelectionMenu.tsx  SequenceLengthControl.tsx  Stepper.tsx  VSlider.tsx  WavetableEditor.tsx  useSeqGhostPaste.ts  useSeqNoteDrag.ts  useSeqRectSelect.ts
src/drum/: DrumApp.tsx  drum.css  kits.test.ts  kits.ts  main.tsx  params.test.ts  params.ts  patches.test.ts  patches.ts  seq.test.ts  seq.ts  store.test.ts  store.ts
src/engine/: drive.test.ts  drive.ts  modLive.ts  synth.ts  usertables.ts  wavetables.ts  worklet.js  worklet.mod.test.ts  worklet.mono.test.ts  worklet.parity.test.ts  worklet.sync.test.ts  workletHarness.ts
src/hooks/: useComputerKeys.ts  useMidi.ts  useModsByDest.ts  useSeqEditKeys.ts
src/landing/: landing.css  main.ts
src/seq/: SeqApp.tsx  clipLibrary.gen.ts  clipLibrary.test.ts  clipLibrary.ts  clipLibraryActions.test.ts  clipLibraryActions.ts  clipLibraryGenerator.test.ts  clipLibraryStorage.test.ts  clipLibraryStorage.ts  clipTransformations.test.ts  clipTransformations.ts  devices.test.ts  devices.ts  factory.test.ts  factory.ts  gridEdit.test.ts  gridEdit.ts  hostBridge.test.ts  hostBridge.ts  main.tsx  model.ts  onboarding.test.ts  onboarding.ts  protocol.test.ts  protocol.ts  rig.ts  seq.css  sessionExport.test.ts  sessionExport.ts  sessionLibrary.test.ts  sessionLibrary.ts  sessionLibraryStorage.ts  sessionPresets.test.ts  sessionPresets.ts  store.test.ts  store.ts  wtClipRect.test.ts  wtClipRect.ts
src/shared/: seqEdit.padrect.test.ts  seqEdit.rect.test.ts  seqEdit.test.ts  seqEdit.ts
src/store/: slotHelpers.test.ts  slotHelpers.ts
(+124 files in other folders)
